--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-fastapi==0.110.0
+fastapi==0.110.1
 uvicorn[standard]==0.29.0
-asyncpg==0.29.0
 python-dotenv==1.0.1
-requests==2.31.0
-azure-cognitiveservices-speech==1.34.1  # Only include if you're using Azure TTS
+azure-cognitiveservices-speech==1.34.1
+supabase==2.2.0
+transformers==4.41.1
+nltk==3.8.1
+asyncpg==0.29.0
+torch>=2.1.0
